# covertops-cmake-llvm

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  coverconfig.json  package-lock.json  package.json  package.json.ts.mjs  tsconfig.json  webpack.config.js
.github/workflows/: cicd.yml
npm-scripts/: package.json.ts.mjs
src/: cppLlvmCoverage.ts  definitions.ts  extension-name.ts  extension.ts  main.ts  service.ts  strings.ts  types.d.ts
src/adapters/: child-process.ts  cmakeProcess.ts  extensionSettings.ts  file-system.ts  fileSystemBuildTreeDirectoryResolver.ts  fileSystemCoverageInfoFilesResolver.ts  fileSystemUncoveredCodeRegionsCollector.ts  input-stream.ts  process-control.ts  realCmakeProcess.ts  streamedUncoveredCodeRegionsCollector.ts  vscode.ts
src/adapters/abstractions/: file-system.ts  process-control.ts  vscode.ts
src/adapters/implementations/: file-system.ts  process-control.ts  vscode.ts
src/adapters/interfaces/: exec-file-callable.ts  file-system.ts  process-control.ts  vscode-workspace.ts  vscode.ts
src/domain/: decoration-locations-provider.ts
src/domain/interfaces/: cmake-contract.ts  coverage-info-collector-contract.ts  decoration-locations-provider-contract.ts
src/domain/ports/: buildTreeDirectoryResolver.ts  uncoveredCodeRegionsCollector.ts
src/domain/services/: build-system-generator.ts  build-tree-directory-resolver.ts  cmake.ts  coverage-info-collector.ts  coverage-info-file-resolver.ts  decoration-locations-provider.ts  decorationLocationsProvider.ts  file-or-directory-resolver.ts  settings-provider.ts  streamed-uncovered-code-regions-collector.ts  uncovered-code-regions-collector.ts
src/domain/value-objects/: basic-cmake.ts  collected-coverage-info.ts  coverage-decorations.ts  coverage-info.ts  coverage-summary.ts  region-coverage-info.ts  settings.ts
src/environment/: extensionSettings.ts  fileSystemBuildTreeDirectoryResolver.ts  fileSystemCoverageInfoFilesResolver.ts  realCmakeProcess.ts
src/extension/: cov.ts  definitions.ts  imports.ts  strings.ts  types.d.ts  uncovered-code-regions-document-content-provider.ts
src/extension/abstractions/: cov.ts  covert-ops.ts  text-editor-like.ts  text-editor-with-decorations.ts  uncovered-code-regions-virtual-text-editor.ts
src/extension/factories/: cov.ts  coverage-info-provider.ts  decoration-location-provider.ts  decoration-locations-provider.ts  uncovered-code-regions-virtual-text-editor.ts
src/extension/implementations/: cov.ts  covert-ops.ts  definitions.ts  output-channel.ts  strings.ts  text-editor-with-decorations.ts  uncovered-code-regions-document-content-provider.ts  uncovered-code-regions-virtual-text-editor.ts
src/extension/internal/: cov.ts
src/factories/: coverage-info-provider.ts  uncovered-code-regions-virtual-text-editor.ts
src/infrastructure/: extension-settings.ts  file-system-build-tree-directory-resolver.ts  fileSystemBuildTreeDirectoryResolver.ts  real-cmake-process.ts  realCmakeProcess.ts  streamed-uncovered-code-regions-collector.ts  streamedUncoveredCodeRegionsCollector.ts
src/modules/: types.d.ts
src/modules/abstractions/: coverage-info-provider.ts  settings.ts
src/modules/build-tree-directory-resolver/: imports.d.ts  imports.ts
src/modules/cmake/: imports.d.ts  imports.ts
src/modules/coverage-info-collector/: imports.d.ts  imports.ts
src/modules/coverage-info-file-resolver/: imports.d.ts  imports.ts
src/modules/coverage-info-provider/: imports.ts
src/modules/decoration-locations-provider/: imports.ts
src/modules/implementations/: build-tree-directory-resolver.ts  cmake.ts  coverage-info-collector.ts  coverage-info-file-resolver.ts  coverage-info-provider.ts  coverage-info.ts  coverage-summary.ts  imports.d.ts  region-coverage-info.ts  settings-provider.ts  types.d.ts
src/modules/settings-provider/: imports.d.ts  imports.ts
src/ports/: buildTreeDirectoryResolver.ts  coverageInfoFilesResolver.ts
src/records/: coverageDecorations.ts  settings.ts
src/services/: buildTreeDirectoryResolver.ts  decorationLocationProvider.ts  decorationLocationsProvider.ts
src/shared-kernel/abstractions/: file-system.ts  process-control.ts  vscode.ts
src/test/: runTest.ts
src/test/suite/: default.covdata.json  extension.test.ts
tests/: run-test.ts  runTest.ts
tests/builders/: coverage-info-collector.ts  fake-adapters.ts  settings.ts
tests/faked-adapters/: error-channel.ts  fs.ts  globbing.ts  input-stream.ts  mk-dir.ts  process.ts  progress-reporter.ts  stat-file.ts  vscode-workspace.ts
tests/fakes/adapters/: error-channel.ts  file-system.ts  globbing.ts  input-stream.ts  mk-dir.ts  process-control.ts  process.ts  progress-reporter.ts  stat-file.ts  vscode-workspace.ts  vscode.ts
tests/fakes/domain/: cmake.ts
tests/fakes/extension/: uncovered-code-regions-virtual-text-editor.ts
tests/suites/: configure-and-run.ts  index.ts  runFor.ts
tests/suites/acceptance/: coverage-info-provider.test.ts  decoration-location-provider.test.ts  decorationLocationProvider.test.ts  imports.d.ts  imports.ts  index.ts  settings-provider.test.ts  types.d.ts
tests/suites/extension/: cov.test.ts  covert-ops.test.ts  index.ts  types.d.ts
tests/suites/integration/: adapters.workspace.test.ts  coverage-info-provider.workspace.test.ts  covert-ops.workspace.test.ts  decoration-location-provider.workspace.test.ts  imports.d.ts  (+10 more)
tests/suites/integration/data/workspace/src/: CMakeLists.txt  lib.cpp  lib.hpp
tests/suites/integration/data/workspace/src/fullyCovered/: CMakeLists.txt  fullyCoveredLib.cpp  fullyCoveredLib.hpp
tests/suites/integration/data/workspace/src/partiallyCovered/: CMakeLists.txt  partiallyCoveredLib.cpp  partiallyCoveredLib.hpp
tests/suites/integration/data/workspace/tests/: CMakeLists.txt  nocoverage.cpp  partialcoverage.cpp
tests/suites/integration/data/workspace/tests/fullyCovered/: CMakeLists.txt  fullCoverage.cpp
tests/suites/integration/data/workspace/tests/partiallyCovered/: CMakeLists.txt  partialCoverage.cpp  partialcoverage.cpp
tests/utils/: settings.ts  spy-event-emitter-for.ts  spy.ts
(+129 files in other folders)
